parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> print
Rule 6     statement -> if_else
Rule 7     statement -> func_def
Rule 8     statement -> func_call
Rule 9     statement -> return_stmt
Rule 10    statement -> expression
Rule 11    assignment -> IDENTIFIER EQUALS expression
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression TIMES expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression MOD expression
Rule 17    expression -> expression POWER expression
Rule 18    expression -> expression EQ expression
Rule 19    expression -> expression NE expression
Rule 20    expression -> expression GT expression
Rule 21    expression -> expression LT expression
Rule 22    expression -> expression GE expression
Rule 23    expression -> expression LE expression
Rule 24    expression -> NUMBER
Rule 25    expression -> IDENTIFIER
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    print -> PRINT LPAREN expression RPAREN
Rule 28    if_else -> IF expression COLON statement ELSE COLON statement
Rule 29    if_else -> IF expression COLON statement
Rule 30    return_stmt -> RETURN expression
Rule 31    func_def -> DEF IDENTIFIER LPAREN param_list RPAREN COLON statements
Rule 32    func_call -> IDENTIFIER LPAREN arg_list RPAREN
Rule 33    param_list -> IDENTIFIER
Rule 34    param_list -> param_list COMMA IDENTIFIER
Rule 35    param_list -> <empty>
Rule 36    arg_list -> expression
Rule 37    arg_list -> arg_list COMMA expression
Rule 38    arg_list -> <empty>

Terminals, with rules where they appear

COLON                : 28 28 29 31
COMMA                : 34 37
DEF                  : 31
DIVIDE               : 15
ELSE                 : 28
EQ                   : 18
EQUALS               : 11
GE                   : 22
GT                   : 20
IDENTIFIER           : 11 25 31 32 33 34
IF                   : 28 29
LE                   : 23
LPAREN               : 26 27 31 32
LT                   : 21
MINUS                : 13
MOD                  : 16
NE                   : 19
NUMBER               : 24
PLUS                 : 12
POWER                : 17
PRINT                : 27
RETURN               : 30
RPAREN               : 26 27 31 32
TIMES                : 14
error                : 

Nonterminals, with rules where they appear

arg_list             : 32 37
assignment           : 4
expression           : 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 26 27 28 29 30 36 37
func_call            : 8
func_def             : 7
if_else              : 6
param_list           : 31 34
print                : 5
program              : 0
return_stmt          : 9
statement            : 2 3 28 28 29
statements           : 1 2 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . print
    (6) statement -> . if_else
    (7) statement -> . func_def
    (8) statement -> . func_call
    (9) statement -> . return_stmt
    (10) statement -> . expression
    (11) assignment -> . IDENTIFIER EQUALS expression
    (27) print -> . PRINT LPAREN expression RPAREN
    (28) if_else -> . IF expression COLON statement ELSE COLON statement
    (29) if_else -> . IF expression COLON statement
    (31) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON statements
    (32) func_call -> . IDENTIFIER LPAREN arg_list RPAREN
    (30) return_stmt -> . RETURN expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 14
    DEF             shift and go to state 15
    RETURN          shift and go to state 16
    NUMBER          shift and go to state 17
    LPAREN          shift and go to state 13

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    print                          shift and go to state 5
    if_else                        shift and go to state 6
    func_def                       shift and go to state 7
    func_call                      shift and go to state 8
    return_stmt                    shift and go to state 9
    expression                     shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . print
    (6) statement -> . if_else
    (7) statement -> . func_def
    (8) statement -> . func_call
    (9) statement -> . return_stmt
    (10) statement -> . expression
    (11) assignment -> . IDENTIFIER EQUALS expression
    (27) print -> . PRINT LPAREN expression RPAREN
    (28) if_else -> . IF expression COLON statement ELSE COLON statement
    (29) if_else -> . IF expression COLON statement
    (31) func_def -> . DEF IDENTIFIER LPAREN param_list RPAREN COLON statements
    (32) func_call -> . IDENTIFIER LPAREN arg_list RPAREN
    (30) return_stmt -> . RETURN expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 14
    DEF             shift and go to state 15
    RETURN          shift and go to state 16
    NUMBER          shift and go to state 17
    LPAREN          shift and go to state 13

    statement                      shift and go to state 18
    assignment                     shift and go to state 4
    print                          shift and go to state 5
    if_else                        shift and go to state 6
    func_def                       shift and go to state 7
    func_call                      shift and go to state 8
    return_stmt                    shift and go to state 9
    expression                     shift and go to state 10

state 3

    (3) statements -> statement .

    IDENTIFIER      reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    IDENTIFIER      reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> print .

    IDENTIFIER      reduce using rule 5 (statement -> print .)
    PRINT           reduce using rule 5 (statement -> print .)
    IF              reduce using rule 5 (statement -> print .)
    DEF             reduce using rule 5 (statement -> print .)
    RETURN          reduce using rule 5 (statement -> print .)
    NUMBER          reduce using rule 5 (statement -> print .)
    LPAREN          reduce using rule 5 (statement -> print .)
    $end            reduce using rule 5 (statement -> print .)
    ELSE            reduce using rule 5 (statement -> print .)


state 6

    (6) statement -> if_else .

    IDENTIFIER      reduce using rule 6 (statement -> if_else .)
    PRINT           reduce using rule 6 (statement -> if_else .)
    IF              reduce using rule 6 (statement -> if_else .)
    DEF             reduce using rule 6 (statement -> if_else .)
    RETURN          reduce using rule 6 (statement -> if_else .)
    NUMBER          reduce using rule 6 (statement -> if_else .)
    LPAREN          reduce using rule 6 (statement -> if_else .)
    $end            reduce using rule 6 (statement -> if_else .)
    ELSE            reduce using rule 6 (statement -> if_else .)


state 7

    (7) statement -> func_def .

    IDENTIFIER      reduce using rule 7 (statement -> func_def .)
    PRINT           reduce using rule 7 (statement -> func_def .)
    IF              reduce using rule 7 (statement -> func_def .)
    DEF             reduce using rule 7 (statement -> func_def .)
    RETURN          reduce using rule 7 (statement -> func_def .)
    NUMBER          reduce using rule 7 (statement -> func_def .)
    LPAREN          reduce using rule 7 (statement -> func_def .)
    $end            reduce using rule 7 (statement -> func_def .)
    ELSE            reduce using rule 7 (statement -> func_def .)


state 8

    (8) statement -> func_call .

    IDENTIFIER      reduce using rule 8 (statement -> func_call .)
    PRINT           reduce using rule 8 (statement -> func_call .)
    IF              reduce using rule 8 (statement -> func_call .)
    DEF             reduce using rule 8 (statement -> func_call .)
    RETURN          reduce using rule 8 (statement -> func_call .)
    NUMBER          reduce using rule 8 (statement -> func_call .)
    LPAREN          reduce using rule 8 (statement -> func_call .)
    $end            reduce using rule 8 (statement -> func_call .)
    ELSE            reduce using rule 8 (statement -> func_call .)


state 9

    (9) statement -> return_stmt .

    IDENTIFIER      reduce using rule 9 (statement -> return_stmt .)
    PRINT           reduce using rule 9 (statement -> return_stmt .)
    IF              reduce using rule 9 (statement -> return_stmt .)
    DEF             reduce using rule 9 (statement -> return_stmt .)
    RETURN          reduce using rule 9 (statement -> return_stmt .)
    NUMBER          reduce using rule 9 (statement -> return_stmt .)
    LPAREN          reduce using rule 9 (statement -> return_stmt .)
    $end            reduce using rule 9 (statement -> return_stmt .)
    ELSE            reduce using rule 9 (statement -> return_stmt .)


state 10

    (10) statement -> expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . TIMES expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . MOD expression
    (17) expression -> expression . POWER expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NE expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . LE expression

    IDENTIFIER      reduce using rule 10 (statement -> expression .)
    PRINT           reduce using rule 10 (statement -> expression .)
    IF              reduce using rule 10 (statement -> expression .)
    DEF             reduce using rule 10 (statement -> expression .)
    RETURN          reduce using rule 10 (statement -> expression .)
    NUMBER          reduce using rule 10 (statement -> expression .)
    LPAREN          reduce using rule 10 (statement -> expression .)
    $end            reduce using rule 10 (statement -> expression .)
    ELSE            reduce using rule 10 (statement -> expression .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 23
    POWER           shift and go to state 24
    EQ              shift and go to state 25
    NE              shift and go to state 26
    GT              shift and go to state 27
    LT              shift and go to state 28
    GE              shift and go to state 29
    LE              shift and go to state 30


state 11

    (11) assignment -> IDENTIFIER . EQUALS expression
    (32) func_call -> IDENTIFIER . LPAREN arg_list RPAREN
    (25) expression -> IDENTIFIER .

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUALS          shift and go to state 31
    LPAREN          shift and go to state 32
    PLUS            reduce using rule 25 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 25 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 25 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 25 (expression -> IDENTIFIER .)
    MOD             reduce using rule 25 (expression -> IDENTIFIER .)
    POWER           reduce using rule 25 (expression -> IDENTIFIER .)
    EQ              reduce using rule 25 (expression -> IDENTIFIER .)
    NE              reduce using rule 25 (expression -> IDENTIFIER .)
    GT              reduce using rule 25 (expression -> IDENTIFIER .)
    LT              reduce using rule 25 (expression -> IDENTIFIER .)
    GE              reduce using rule 25 (expression -> IDENTIFIER .)
    LE              reduce using rule 25 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 25 (expression -> IDENTIFIER .)
    PRINT           reduce using rule 25 (expression -> IDENTIFIER .)
    IF              reduce using rule 25 (expression -> IDENTIFIER .)
    DEF             reduce using rule 25 (expression -> IDENTIFIER .)
    RETURN          reduce using rule 25 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 25 (expression -> IDENTIFIER .)
    $end            reduce using rule 25 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 25 (expression -> IDENTIFIER .)

  ! LPAREN          [ reduce using rule 25 (expression -> IDENTIFIER .) ]


state 12

    (27) print -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 33


state 13

    (26) expression -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 34

state 14

    (28) if_else -> IF . expression COLON statement ELSE COLON statement
    (29) if_else -> IF . expression COLON statement
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 36

state 15

    (31) func_def -> DEF . IDENTIFIER LPAREN param_list RPAREN COLON statements

    IDENTIFIER      shift and go to state 37


state 16

    (30) return_stmt -> RETURN . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 38

state 17

    (24) expression -> NUMBER .

    PLUS            reduce using rule 24 (expression -> NUMBER .)
    MINUS           reduce using rule 24 (expression -> NUMBER .)
    TIMES           reduce using rule 24 (expression -> NUMBER .)
    DIVIDE          reduce using rule 24 (expression -> NUMBER .)
    MOD             reduce using rule 24 (expression -> NUMBER .)
    POWER           reduce using rule 24 (expression -> NUMBER .)
    EQ              reduce using rule 24 (expression -> NUMBER .)
    NE              reduce using rule 24 (expression -> NUMBER .)
    GT              reduce using rule 24 (expression -> NUMBER .)
    LT              reduce using rule 24 (expression -> NUMBER .)
    GE              reduce using rule 24 (expression -> NUMBER .)
    LE              reduce using rule 24 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 24 (expression -> NUMBER .)
    PRINT           reduce using rule 24 (expression -> NUMBER .)
    IF              reduce using rule 24 (expression -> NUMBER .)
    DEF             reduce using rule 24 (expression -> NUMBER .)
    RETURN          reduce using rule 24 (expression -> NUMBER .)
    NUMBER          reduce using rule 24 (expression -> NUMBER .)
    LPAREN          reduce using rule 24 (expression -> NUMBER .)
    $end            reduce using rule 24 (expression -> NUMBER .)
    RPAREN          reduce using rule 24 (expression -> NUMBER .)
    COLON           reduce using rule 24 (expression -> NUMBER .)
    ELSE            reduce using rule 24 (expression -> NUMBER .)
    COMMA           reduce using rule 24 (expression -> NUMBER .)


state 18

    (2) statements -> statements statement .

    IDENTIFIER      reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)


state 19

    (12) expression -> expression PLUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 39

state 20

    (13) expression -> expression MINUS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 40

state 21

    (14) expression -> expression TIMES . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 41

state 22

    (15) expression -> expression DIVIDE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 42

state 23

    (16) expression -> expression MOD . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 43

state 24

    (17) expression -> expression POWER . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 44

state 25

    (18) expression -> expression EQ . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 45

state 26

    (19) expression -> expression NE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 46

state 27

    (20) expression -> expression GT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 47

state 28

    (21) expression -> expression LT . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 48

state 29

    (22) expression -> expression GE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 49

state 30

    (23) expression -> expression LE . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 50

state 31

    (11) assignment -> IDENTIFIER EQUALS . expression
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    expression                     shift and go to state 51

state 32

    (32) func_call -> IDENTIFIER LPAREN . arg_list RPAREN
    (36) arg_list -> . expression
    (37) arg_list -> . arg_list COMMA expression
    (38) arg_list -> .
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression TIMES expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MOD expression
    (17) expression -> . expression POWER expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NE expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression LE expression
    (24) expression -> . NUMBER
    (25) expression -> . IDENTIFIER
    (26) expression -> . LPAREN expression RPAREN

    RPAREN          reduce using rule 38 (arg_list -> .)
    COMMA           reduce using rule 38 (arg_list -> .)
    NUMBER          shift and go to state 17
    IDENTIFIER      shift and go to state 35
    LPAREN          shift and go to state 13

    arg_list                       shift and go to state 52
    expression                     shift and go to state 53

state 33
